# snmptrap-python

./: exec.sh  pyproject.toml  snmprecv.py  snmpsend.py
